<resources>
    <string name="app_name">SemesterProject</string>
    <string name="choose_your_country">Choose your country!</string>
    <string name="search_country_btn">search Country</string>
    <string name="summary">Summary</string>
    <string name="diseaserisklevel">DiseaseRiskLevel</string>
    <string name="title_sum">title_sum</string>
    <string name="weblinks">webLinks</string>
    <string name="titlestats">titleStats</string>
    <string name="disease_risk_level">Disease risk level:</string>
    <string name="confirmed_cases">Confirmed cases:</string>
    <string name="confirmed_deaths">Confirmed deaths:</string>
    <string name="vaccinated_one_dose">Vaccinated one dose:</string>
    <string name="vaccinated_fully">Vaccinated fully:</string>
    <string name="titleareapolicy">titleAreaPolicy</string>
    <string name="titleentrypolicy">titleentrypolicy</string>
</resources>